<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('priorities', function (Blueprint $table) {
            $table->id();
            $table->foreignId('color_id')->constrained('colors')->cascadeOnDelete()->comment('Warna default untuk prioritas ini');
            $table->smallInteger('rank')->comment('Makin kecil angka makin penting');
            $table->string('name')->comment('Nama prioritas (misal: High, Medium, Low)');
            $table->text('note')->nullable()->comment('Catatan tambahan prioritas');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('priorities');
    }
};
